[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Screens/Menus/Pause/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Game/Screens/Menus/UIButton/UIButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Screens/ResponsiveControl.gd" type="Script" id=3]

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
layer = 6
script = ExtResource( 1 )

[node name="Control" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.639216 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -37.0
margin_right = 64.0
margin_bottom = 37.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="Control/VBoxContainer" instance=ExtResource( 2 )]
text = "Resume"

[node name="SettingsButton" parent="Control/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 20.0
margin_bottom = 34.0
text = "Settings"

[node name="RestartButton" parent="Control/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 40.0
margin_bottom = 54.0
text = "Restart level"

[node name="ExitButton" parent="Control/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 60.0
margin_bottom = 74.0
text = "Exit level"

[connection signal="pressed" from="Control/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
